# rtp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: builder.rs  lib.rs  reader.rs
