[package]
name = "rtp-rs"
version = "0.2.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
keywords = [ "RTP", "rfc3550" ]
description = "Parser for RTP packet structure"
repository = "https://github.com/dholroyd/rtp-rs"
license = "MIT/Apache-2.0"
categories = [ "multimedia::video", "parsing", "network-programming" ]

[lib]
name = "rtp_rs"
path = "src/lib.rs"
