[package]
name = "rtp-rs"
version = "0.3.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
keywords = [ "RTP", "rfc3550" ]
description = "Parser for RTP packet structure"
repository = "https://github.com/dholroyd/rtp-rs"
license = "MIT/Apache-2.0"
categories = [ "multimedia::video", "parser-implementations", "network-programming" ]
edition = "2018"

[lib]
name = "rtp_rs"
path = "src/lib.rs"
