[package]
name = "rtp-rs"
version = "0.6.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>", "Markus Hadenfeldt <git@did.science>"]
keywords = [ "RTP", "rfc3550" ]
description = "Parser and generator for RTP packet structure"
repository = "https://github.com/dholroyd/rtp-rs"
license = "MIT/Apache-2.0"
categories = [ "multimedia::video", "parser-implementations", "network-programming" ]
edition = "2018"
readme = "README.md"

[lib]
name = "rtp_rs"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
